force-app/main/default/objects/Application__c/fields/Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email__c</fullName>
    <formula>Applicant__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Email</label>
    <type>Text</type>
</CustomField>