force-app/main/default/objects/Application__c/fields/Application_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Application_External_Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>