force-app/main/default/objects/Application__c/fields/Interview_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interview_Notes__c</fullName>
    <label>Interview_Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>