force-app/main/default/objects/Application__c/fields/Interview_Score__c.field-meta.xml
<CustomField>
    <fullName>Interview_Score__c</fullName>
    <label>Interview_Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>