force-app/main/default/objects/Application__c/fields/Is_Stale__c.field-meta.xml
<CustomField>
    <fullName>Is_Stale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stale</label>
    <type>Checkbox</type>
</CustomField>