force-app/main/default/objects/Application__c/fields/Offer_Extended_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Extended_Date__c</fullName>
    <label>Offer Extended Date</label>
    <type>Date</type>
</CustomField>