force-app/main/default/objects/Application__c/fields/Proposed_Salary__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Salary__c</fullName>
    <label>Proposed Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>