force-app/main/default/objects/Application__c/fields/Stage_Last_Changed__c.field-meta.xml
<CustomField>
    <fullName>Stage_Last_Changed__c</fullName>
    <label>Stage Last Changed</label>
    <type>DateTime</type>
</CustomField>