force-app/main/default/objects/Application__c/recordTypes/External.recordType-meta.xml
<RecordType>
    <fullName>External</fullName>
    <active>true</active>
    <description>External Record Type</description>
    <label>External</label>
</RecordType>